project/k8s/distributor.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: distributor
spec:
  replicas: 0
  selector:
    matchLabels:
      app: distributor
  template:
    metadata:
      labels:
        app:
          distributor
    spec:
      containers:
        - name: distributor
          image: alpine:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: distributor
spec:
  selector:
    name: distributor
  ports:
    - protocol: TCP
      name: main-port
      port: 8080
      targetPort: 8080
