project/k8s/front_end.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app:
          front-end
    spec:
      containers:
        - name: front-end
          image: todo99.azurecr.io/front-end:v0.0.6
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: acr-auth

---
apiVersion: v1
kind: Service
metadata:
  name: front-end
spec:
  selector:
    name: front-end
  ports:
    - protocol: TCP
      name: main-port
      port: 8080
      targetPort: 8080
