project/k8s/mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
      matchLabels:
        app: postgres
  template:
    metadata:
      labels:
        app:
          postgres
    spec:
        containers:
        - name: postgres
          image: postgres:14.2
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
    selector:
        name: postgres
    ports:
        - protocol: TCP
          name: main-port
          port: 5432
          targetPort: 5432
