project/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: front-end.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 8081
    - host: distributor-service.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: distributor-service
                port:
                  number: 8080
    - host: db-service.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: db-service
                port:
                  number: 5001
